# Wireframe

./: .gitignore  CMakeLists.txt  LICENSE.md  imgui.ini  readme.md
include/: App.h  Camera.h  Map.h  Mesh.h  Projection.h  Shader.h  Vertex.h  Window.h
maps/: 42.map  mountain.map  plat.txt
shaders/: basic.frag  basic.vert
src/: App.cpp  Camera.cpp  Map.cpp  Mesh.cpp  Shader.cpp  Window.cpp  main.cpp
